--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,12 @@ jobs:
     steps:
     - uses: actions/checkout@main
 
-    - name: Install Trealla ProLog
-      uses: logtalk-actions/setup-trealla-prolog@master
+    - name: Cache Prolog
+      uses: actions/cache@v2
+      id: cache-prolog
       with:
-        trealla-prolog-branch: devel
-        trealla-prolog-version: latest
+        path: "~/prolog"
+        key: cache-pl-packages
 
     - name: test
       run: |
