--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,10 @@
 name: test
 
-on: [push]
-
+on: 
+  push:
+  workflow_dispatch:
+  schedule:
+    - cron: '15 3 1 * *'  # <https://crontab.guru/#45_16_*_*_0>  
 jobs:
   test:
     runs-on: ubuntu-latest
